p2/confs/app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  type: ClusterIP
  selector:
    app: app-one
  ports:
  - port: 80
    targetPort: 8080
